--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -47,7 +47,8 @@ block contents
             li 
                 a(href="http://www.flickr.com/photos/59326435@N04/" target="_blank") Flickr (maintained?)
 
-                
+    script(src="/assets/js/shared.js")
+    script(src="/assets/js/home.js")
     script.
         var ipf = {};
         ipf.page = 'index';
