task updates; bower jquery and owl carousel; basic responsive menu implementation

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -2,3 +2,8 @@ $font-size: 16px;
 
 $site-max-width: 42em;
 $site-hero-width: 46em;
+
+$bp-sm: 320px;
+$bp-md: 768px;
+$bp-lg: 1024;
+// $bp-xl: 1280; ?
