--- a/src/assets/css/common/_header.scss
+++ b/src/assets/css/common/_header.scss
@@ -1,17 +1,126 @@
-header {
+#Header {
+    position: relative;
     width: 100%;
     padding: 1em 0;
     background: rgb(230, 230, 230);
 }
 
-.NavPrimary {
-    margin-bottom: 0.5em;
+#Logo {
+    float: left;
+    margin-left: 0.8em;
+    width: 166px;
+    height: 66px;
 
-    a {
-        font-size: 1em;
+    @media (min-width: $bp-md) {
+        margin-left: -1em;
     }
 }
 
-.NavSecondary a {
-    font-size: 0.75em;
+#Trigger {
+    display: none;
+
+    &:checked ~ #NavHeader {
+        max-height: 25em;
+    }
+}
+
+#TriggerLabel {
+    float: right;
+    display: inline-block;
+    margin: 1.25em 1.25em 0 0;
+    padding: 4px;
+    border: 1px solid #aaa;
+
+    @media (min-width: $bp-md) {
+        display: none;
+    }
+}
+
+#NavHeader {
+    max-height: 0;
+    overflow: hidden;
+
+    @media (min-width: $bp-md) {
+        max-height: inherit;
+        // position: absolute;
+        // top: 1.375rem;
+        // right: 0;
+    }
+}
+
+.NavPrimary, .NavSecondary {
+    clear: both;
+}
+
+.NavPrimary {
+    margin: 1em 0 0.5em;
+
+    @media (min-width: $bp-md) {
+        margin: 1em auto;
+    }
+
+    a {
+        margin-bottom: 0.375rem;
+        padding: 0.5rem 1rem;
+        float: left;
+        width: 33.33%;
+        font-size: 1em;
+        background: #333;
+        border-right: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        text-align: center;
+
+        @media (max-width: ($bp-md - 1)) {
+            color: #ccc;
+        }
+
+        @media (min-width: $bp-md) {
+            float: none;
+            width: inherit;
+            text-align: left;
+            background: none;
+            border: none;
+            &:first-child {
+                padding-left: 0;
+            }
+        }
+    }
+}
+
+.NavSecondary {
+    margin: 1em 0;
+
+    @media (min-width: $bp-md) {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-right: 1rem;
+        text-align: right;
+    }
+
+    a {
+        margin-bottom: 0.375rem;
+        padding: 0.675rem 0.25rem;
+        float: left;
+        width: 25%;
+        background: #777;
+        border-right: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        text-align: center;
+        font-size: 0.75em;
+
+        @media (max-width: ($bp-md - 1)) {
+            color: #ccc;
+        }
+
+        @media (min-width: $bp-md) {
+            display: inline-block;
+            margin-left: 1em;
+            float: none;
+            width: inherit;
+            text-align: left;
+            background: none;
+            border: none;
+        }
+    }
 }
