--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -15,11 +15,18 @@ block contents
         h1 Welcome to Atlanta's Best Street Festival
 
             
-    .Hero
+    .Hero.owl-carousel.owl-theme
     
-        p Tour of Homes Preview: Friday, #{globals.ipf.date.friday.date} (#{globals.ipf.date.friday.hours})
-
-        p Festival: Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}, #{globals.ipf.date.year} (#{globals.ipf.date.saturday.hours})
+        //- p Tour of Homes Preview: Friday, #{globals.ipf.date.friday.date} (#{globals.ipf.date.friday.hours})
+        //- 
+        //- p Festival: Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}, #{globals.ipf.date.year} (#{globals.ipf.date.saturday.hours})
+        
+        div
+            img(src="/assets/img/fpo/hero1.jpg")
+        div
+            img(src="/assets/img/fpo/hero2.jpg")
+        div
+            img(src="/assets/img/fpo/hero3.jpg")
 
                 
     .u-container
@@ -41,14 +48,23 @@ block contents
 
         ul
             li 
-                a(href="https://www.facebook.com/InmanParkFestival/" target="_blank") FB
+                a(href="https://www.facebook.com/InmanParkFestival/" target="_blank") Facebook
             li 
                 a(href="http://twitter.com/InmanParkFest" target="_blank") Twitter
             li 
                 a(href="http://www.flickr.com/photos/59326435@N04/" target="_blank") Flickr (maintained?)
 
-    script(src="/assets/js/shared.js")
-    script(src="/assets/js/home.js")
+    script(src="/assets/js/plugins.js")
+    //- script(src="/assets/js/home.js")
     script.
         var ipf = {};
         ipf.page = 'index';
+        $('.owl-carousel').owlCarousel({
+            dots: true,
+            loop: true,
+            responsive: {
+                0: {
+                    items: 1
+                }
+            }
+        });
