added data-processing files and scripts for handling vendor data

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -9,8 +9,11 @@
 @import 'common/footer';
 @import 'common/hero';
 @import 'common/promo';
+@import 'common/forms';
+@import 'common/vendor';
 
 @import 'pages/sponsors';
 @import 'pages/faq';
 @import 'pages/music';
 @import 'pages/tour';
+@import 'pages/contact';
