--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -23,7 +23,7 @@ block contents
             dd A. The parade occurs on Saturday at 2:00 p.m.
 
             dt Q. Are Pets Allowed?
-            dd A. Please remember that, by City of Atlanta Ordinance, pets are not allowed at Festivals, “unless part of a planned festival program or assisting persons with disabilities”. This prohibition includes “dogs, cats, snakes, birds, pigs, etc.”, and applies whether or not the pet is leashed. As the ordnance says, this is for the pet’s protection as well as for the protection of festival patrons. Thanks!!
+            dd A. Please remember that, by City of Atlanta Ordinance, pets are not allowed at Festivals, "unless part of a planned festival program or assisting persons with disabilities". This prohibition includes "dogs, cats, snakes, birds, pigs, etc.", and applies whether or not the pet is leashed. As the ordnance says, this is for the pet's protection as well as for the protection of festival patrons. Thanks!!
         
         h2 Tour of Homes Tickets 
         
