--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -14,9 +14,9 @@ block contents
 
         article
 
-            p Inman Park Spring Festival takes place in one of Atlanta’s oldest and most scenic neighborhoods. First developed in the late 1800s, Inman Park is home to many historic homes and parks. The Festival began in the early 1970s as a means to attract attention to gentrification efforts that sought to revitalize the community.
+            p Inman Park Spring Festival takes place in one of Atlanta's oldest and most scenic neighborhoods. First developed in the late 1800s, Inman Park is home to many historic homes and parks. The Festival began in the early 1970s as a means to attract attention to gentrification efforts that sought to revitalize the community.
 
-            p The festival offers something for everybody. Music, kids activities, a Tour of Homes, a marvelous street parade, an artists’ market, some of the city’s best people-watching. Come early, stay late, and be our guests at Atlanta’s best street festival.
+            p The festival offers something for everybody. Music, kids activities, a Tour of Homes, a marvelous street parade, an artists' market, some of the city's best people-watching. Come early, stay late, and be our guests at Atlanta's best street festival.
 
 
             h2 Important Festival Details
@@ -39,6 +39,10 @@ block contents
             h3 Arrival
             
             p Check out the <a href="/map">Map page</a> for an overview of important festival locations. For information on how to get to festival, see the <a href="/directions">Directions page</a>. <strong>We highly recommend not driving to the neighborhood.</strong>
+            
+            h3 FAQ
+            
+            p Read our <a href="/about/faq">Frequently-asked Questions here.</a>
             
             
             h2 Summary of Events
