--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -10,3 +10,7 @@ block contents
         h1 Map
 
         p Maybe this page becomes /arrival and contains Map, Directions and Parking info.
+        
+        p I (Chad) would argue that the current directions text is outdated in terms of what people do these days. A Google/interactive map is the norm. 
+
+        p Do we use Cooper's hand-drawn map here or do we start maintaining a Google map?
