--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -15,6 +15,7 @@ block contents
         ul
             li what's the best way to layout this info and satisify contractual requirements?
             li document the contractual requirements
+            li should we add a "Sponsor Info" page with these details to mitigate sending an email?
 
 
         ul.Sponsors.Sponsors--gold
