--- a/src/html/templates/layout.jade
+++ b/src/html/templates/layout.jade
@@ -63,3 +63,6 @@ html(lang="en")
                     a(href="/trademark" class="PipeNav") Trademark Use
                 
                 p.fineprint #{globals.copyright}
+
+        script(src="/assets/js/plugins.js")
+        block scripts
