--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -39,7 +39,7 @@ block contents
             li 
                 p
                     strong NO CONSECUTIVE SHIFTS. 
-                    | Volunteers can sign up for one shift – volunteers will not be accepted for multiple consecutive shifts unless explicit prior approval is made by the Beer Captains.  Further, we can no longer accept volunteers doing consecutive shifts on different trucks. For example, we can’t accept volunteers moving from truck to truck on back-to-back shifts.  We appreciate everyone’s enthusiasm for volunteering and encourage you to spread your talents around to other volunteer opportunities at Festival if you’d like to do back-to-back shifts.  You are welcome to sign up for two shifts if you spread them over the two days – one on Saturday and one on Sunday.
+                    | Volunteers can sign up for one shift – volunteers will not be accepted for multiple consecutive shifts unless explicit prior approval is made by the Beer Captains.  Further, we can no longer accept volunteers doing consecutive shifts on different trucks. For example, we can't accept volunteers moving from truck to truck on back-to-back shifts.  We appreciate everyone's enthusiasm for volunteering and encourage you to spread your talents around to other volunteer opportunities at Festival if you'd like to do back-to-back shifts.  You are welcome to sign up for two shifts if you spread them over the two days – one on Saturday and one on Sunday.
             
             li 
                 p
