--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -18,7 +18,7 @@ block contents
     
         p Did you ever wonder where ballet came from? This art form is really quite absurd when you take a look at it. Why do they walk like ducks and what are they doing with their arms, circles!? It just is not natural. And then there is modern dance. Is it all suffering? Why are they on the floor!? Get up and cheer up for goodness sake.
 
-        p At the Inman Park Dance Festival some of these questions will be answered. This is because this year’s line-up of performing companies and presented work is really exceptional. It spans 300 years of dance history, has field definers and the next generation of groundbreakers.
+        p At the Inman Park Dance Festival some of these questions will be answered. This is because this year's line-up of performing companies and presented work is really exceptional. It spans 300 years of dance history, has field definers and the next generation of groundbreakers.
 
         p ---this year's description goes here---
         
