--- a/src/html/events/kidzone/index.jade
+++ b/src/html/events/kidzone/index.jade
@@ -18,4 +18,4 @@ block contents
     
         p Festival provides a dedicated space for kids to play that includes slides, obstacles courses, crafts, a great playground, riding toys for our youngest guests and the CHANCE TO JOIN A CIRCUS, all of them FREE! 
         
-        p The Kidzone is located in Springvale Park, off Elizabeth Street and Waverly Way, behind the main music tent. It is a great place to let the kids play while parents or chaperones enjoy one of Atlanta’s oldest urban park spaces. Kidzone hours are from Noon until 6 PM on Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}.
+        p The Kidzone is located in Springvale Park, off Elizabeth Street and Waverly Way, behind the main music tent. It is a great place to let the kids play while parents or chaperones enjoy one of Atlanta's oldest urban park spaces. Kidzone hours are from Noon until 6 PM on Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}.
