--- a/src/html/market/community-corner/index.jade
+++ b/src/html/market/community-corner/index.jade
@@ -13,4 +13,4 @@ block contents
         
         p Non-profit organization may request a space in the Community Corner which is separate from the main vendor area. Appropriate applicants (registered non-profit) are accepted based on availability on first come, first serve basis.
 
-        p Below are last year’s non-profit organizations.
+        p Below are last year's non-profit organizations.
