--- a/src/html/market/street-market/index.jade
+++ b/src/html/market/street-market/index.jade
@@ -11,6 +11,6 @@ block contents
         mixin tertiaryNav(globals.markets.nav, "street market")
 
         
-        p Atlanta’s largest Street Market offers more than 250 booths of antiques and handcrafted wares. You will find plenty of unique items — everything from handmade soap and unique plants to one-of-a-kind paintings and specialty jewelry.
+        p Atlanta's largest Street Market offers more than 250 booths of antiques and handcrafted wares. You will find plenty of unique items — everything from handmade soap and unique plants to one-of-a-kind paintings and specialty jewelry.
 
-        p Below are last year’s Street Market vendors.
+        p Below are last year's Street Market vendors.
