no idea. ancient edits

--- a/src/assets/css/common/_hero.scss
+++ b/src/assets/css/common/_hero.scss
@@ -1,5 +1,5 @@
 .Hero {
-    margin: 2em auto;
+    margin: 0 auto 2em;
     // padding: 6em 3em;
     max-width: $site-hero-width;
     background: #ccc;
