--- a/src/html/about/faq/index.jade
+++ b/src/html/about/faq/index.jade
@@ -27,6 +27,13 @@ block contents
         
         h2 Tour of Homes Tickets 
         
+        dl.FaqList
+            dt Q. How much do Tour of Homes Tickets Cost?
+            dd A. Tour of Homes tickets are $#{globals.tour.cost.advance} in advance and $#{globals.tour.cost.door} starting Friday, #{globals.ipf.date.friday.date}.
+            
+            dt Q. Are there group ticket rates?
+            dd A. Yes, group discounts are available for groups of 10 or more.
+        
         h2 Markets
         
         dl.FaqList
@@ -82,4 +89,4 @@ block contents
             dd 
                 | A. You can sign up online at 
                 = ' '
-                a(href="http://vols.pt/5WUsPh") http://vols.pt/5WUsPh
+                a(href="http://vols.pt/zbJaBt") http://vols.pt/5WUsPh
