--- a/src/html/about/index.jade
+++ b/src/html/about/index.jade
@@ -38,7 +38,7 @@ block contents
             
             h3 Arrival
             
-            p Check out the <a href="/map">Map page</a> for an overview of important festival locations. For information on how to get to festival, see the <a href="/directions">Directions page</a>. <strong>We highly recommend not driving to the neighborhood.</strong>
+            p Check out the <a href="/map">Map page</a> for an overview of important festival locations and for help getting here. <strong>We highly recommend not driving to the neighborhood.</strong> Walk, bike, Marta, Uber, Lyft - there are plenty of other options.
             
             h3 FAQ
             
