--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -11,9 +11,15 @@ block contents
         
         mixin tertiaryNav(globals.events.nav, "dance")
     
-    .Hero
-        p Dance photos go here
-    
+    .Hero.owl-carousel.owl-theme
+            
+        div
+            img(src="/assets/img/fpo/dance-toes-930x450.jpg")
+            
+        div
+            img(src="/assets/img/fpo/dancipede-930x450.jpg")
+
+
     .u-container
     
         p Did you ever wonder where ballet came from? This art form is really quite absurd when you take a look at it. Why do they walk like ducks and what are they doing with their arms, circles!? It just is not natural. And then there is modern dance. Is it all suffering? Why are they on the floor!? Get up and cheer up for goodness sake.
@@ -28,3 +34,17 @@ block contents
             | The dance festival takes place on: Saturday, #{globals.ipf.date.saturday.date} and Sunday, #{globals.ipf.date.sunday.date}, #{globals.ipf.date.year} at 4:00 pm and is located at the Trolley Barn at 963 Edgewood Ave NE. 
             = ' '
             a(href="https://www.google.com/maps/place/THE+TROLLEY+BARN/@33.756329,-84.356141,17z/data=!3m1!4b1!4m2!3m1!1s0x88f503ff905e1bed:0xc1626dc0cd684569") [map]
+            
+
+block scripts
+    script.
+        $('.owl-carousel').owlCarousel({
+            dots: true,
+            loop: true,
+            autoplay: true,
+            responsive: {
+                0: {
+                    items: 1
+                }
+            }
+        });
