--- a/src/html/volunteer/index.jade
+++ b/src/html/volunteer/index.jade
@@ -14,7 +14,7 @@ block contents
             
         p 
             | This festival runs on volunteers. To sign up to volunteer, please visit 
-            a(href="http://vols.pt/5WUsPh") VolunteerSpot
+            a(href="http://vols.pt/zbJaBt") VolunteerSpot
             = ' '
             | today to setup an account.
         
@@ -61,7 +61,7 @@ block contents
         p 
             | If you're ready to volunteer for festival,
             = ' '
-            a(href="http://vols.pt/5WUsPh") sign up at VolunteerSpot now!
+            a(href="http://vols.pt/zbJaBt") sign up at VolunteerSpot now!
         
         
           // this also works although cumbersome:
