--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,9 +1,25 @@
-$font-size: 16px;
+// COLOR FAMILY
+$brand-white: rgb(245, 245, 245);
+$brand-yellow: rgb(254, 202, 56);
+$brand-green: rgb(159, 199, 90);
+$brand-grey-dark: rgb(45, 45, 45);
 
-$site-max-width: 42em;
-$site-hero-width: 56em;
+// TYPOGRAPHY
+$base-font-size: 16px;
+$base-font-color: $brand-grey-dark;
+$base-font-color-inverse: $brand-white;
+$base-font-family-sans-serif: 'Droid Sans Mono', sans-serif;
+$base-font-family-serif: 'Playfair Display', serif;
 
+// BREAKPOINTS
 $bp-sm: 320px;
 $bp-md: 768px;
 $bp-lg: 1024;
-// $bp-xl: 1280; ?
+// $bp-xl: 1280;
+$bp-sm-max: $bp-md - 1px;
+$bp-md-max: $bp-lg - 1px;
+
+
+// SITE CONTAINER DIMENSIONS
+$site-max-width: 42em;
+$site-hero-width: 930px;
