--- a/src/assets/css/common/_core.scss
+++ b/src/assets/css/common/_core.scss
@@ -3,18 +3,26 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    font-size: $font-size;
+    font-family: $base-font-family-sans-serif;
+    font-size: $base-font-size;
+    color: $base-font-color;
     background: #fff;
 }
 
 main {
+    // hackery garbage until we have all content in -
+    // keeps page from being too short.
     min-height: 300px;
-
     @media (min-width: 768px) {
         min-height: 600px;
     }
+}
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: $base-font-family-serif;
+    font-style: italic;
+    font-weight: normal;
+    line-height: 120%;
 }
 
 h1 {
@@ -72,7 +80,7 @@ a {
 
 blockquote {
     margin: 1.5em 2em;
-    font-style: italic;
+    font-family: $base-font-family-serif;
     font-size: 1.25em;
 
     &:before {
