--- a/src/assets/css/common/_header.scss
+++ b/src/assets/css/common/_header.scss
@@ -2,14 +2,17 @@
     position: relative;
     width: 100%;
     padding: 1em 0;
-    background: rgb(230, 230, 230);
+    background: $brand-grey-dark;
+    color: $base-font-color-inverse;
 }
 
 #Logo {
     float: left;
-    margin-left: 0.8em;
-    width: 166px;
-    height: 66px;
+    margin-top: 0.5em;
+    margin-left: 20%;
+    width: 120px;
+    // height: 66px;
+    transform: scale(1.4);
 
     @media (min-width: $bp-md) {
         margin-left: -1em;
@@ -27,7 +30,7 @@
 #TriggerLabel {
     float: right;
     display: inline-block;
-    margin: 1.25em 1.25em 0 0;
+    margin: 1.25em 0 0 0;
     padding: 4px;
     border: 1px solid #aaa;
 
@@ -93,7 +96,7 @@
     @media (min-width: $bp-md) {
         position: absolute;
         top: 0;
-        right: 0;
+        right: 15%;
         margin-right: 1rem;
         text-align: right;
     }
