--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -7,10 +7,29 @@ block contents
 
     .u-container
 
-        h1 Map
-
-        p Maybe this page becomes /arrival and contains Map, Directions and Parking info.
+        h1 Getting to the Inman Park Festival
         
-        p I (Chad) would argue that the current directions text is outdated in terms of what people do these days. A Google/interactive map is the norm. 
-
-        p Do we use Cooper's hand-drawn map here or do we start maintaining a Google map?
+        p As those of you who visit our neighborhood regularly know, parking in Inman Park is becoming a bit more difficult. We strongly encourage you to avoid parking in Inman Park or in the adjacent neighborhoods. Please consider using any of the following options instead of driving directly here:
+        
+        ul
+            li Walk/bike the beltline if you can – it’s really the best way to get here 
+            li Marta to the Inman Park/Reynoldstown Station/ 
+            li Drive to a Marta station near Inman Park (Edgewood/Candler Park, East Lake) and then take Marta just 1 or 2 stops to our station
+            li Lyft/Uber/Taxi
+        
+        h2 Parking
+        
+        p There almost no parking in the neighborhood during festival and many streets will be closed. 
+        
+        
+        h2 Bike
+        
+        p Free and secure valet bike parking will be provided by the Atlanta Bicycle Coalition in the alley off Delta Place near the Delta Park Stage and on the eastern side of the neighborhood at Euclid Avenue and Waverly Way.
+        
+        h2 Festival Map with Free Shuttle Route and Bike Parking
+        
+        <iframe src="https://www.google.com/maps/d/embed?mid=zTP9tjGZt7HU.ktLdj8fTqUuc" width="100%" height="480"></iframe>
+        
+        
+        
+        
