removed some unneeded files; updates to promoItem styling

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -21,5 +21,5 @@ $bp-md-max: $bp-lg - 1px;
 
 
 // SITE CONTAINER DIMENSIONS
-$site-max-width: 42em;
-$site-hero-width: 930px;
+$site-max-width: 940px;
+$site-hero-width: 980px;
