--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -43,21 +43,23 @@ block contents
             p Please join us for the #{globals.ipf.date.annual}th Inman Park Spring Festival and Tour Of Homes.
 
                 
-    ul.PromoGrid
+    ul.PromoGrid.u-container-md
 
-        li.PromoItem
+        li.PromoItem.PromoItem--threeCol.u-clear
+            img.PromoItem-titleImage(src="assets/img/fpo/big-house.jpg" alt="Tour Home")
+
             h4 Tour Homes
             
             p
                 a(href="/events/tour-of-homes") Preview the homes chosen for the 2016 Tour of Homes.
             
             .ArrowNav
-                a(href="#") &#9656;
+                a(href="#") >
 
         li.PromoItem.PromoItem--actionSecondary
             h4 Join Our Volunteer Team Today.
             
-            a(href="http://vols.pt/zbJaBt?utm_source=group-badge-signups-orange")
+            a.u-blockCentered(href="http://vols.pt/zbJaBt?utm_source=group-badge-signups-orange")
                 img(src="//vspot.s3.amazonaws.com/groups/sharing/button_orange.png" alt="Click to View Our Sign-ups on VolunteerSpot" style="max-width:90%;margin:0 auto")
 
         li.PromoItem
@@ -67,7 +69,7 @@ block contents
                 a(href="/news/2016/festival-artist") Read the interview with local artist Cooper Pierce.
             
             .ArrowNav
-                a(href="#") &#9656;
+                a(href="#") >
         
         li.PromoItem.PromoItem--actionPrimary
             h4 Find and Follow Festival Online
