--- a/src/assets/css/common/_utilities.scss
+++ b/src/assets/css/common/_utilities.scss
@@ -1,10 +1,18 @@
 .u-container {
     margin: 0 auto;
-    padding: 0 1em;
+    padding: 0 1.5em;
     max-width: $site-max-width;
 
     @media (min-width: $bp-lg) {
         padding: 0;
+    }
+}
+
+.u-container-md {
+    @media (min-width: $bp-md) {
+        margin: 0 auto !important;
+        padding: 0 !important;
+        max-width: $site-max-width;
     }
 }
 
@@ -13,4 +21,9 @@
     content: '';
     display: table;
     clear: both;
+}
+
+.u-blockCentered {
+    display: block;
+    text-align: center;
 }
