added PageIntro component on home page; added css/components folder for better org

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -12,6 +12,8 @@
 @import 'common/forms';
 @import 'common/vendor';
 
+@import 'components/pageIntro';
+
 @import 'pages/sponsors';
 @import 'pages/faq';
 @import 'pages/music';
