--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -24,23 +24,15 @@ block contents
 
 
     .u-container
-
-        //- h2 Inman Park Festival #{globals.ipf.date.year}
-
-        h1 Welcome to Atlanta's Favorite Street Festival
-
-            
     
-    //- p Tour of Homes Preview: Friday, #{globals.ipf.date.friday.date} (#{globals.ipf.date.friday.hours})
-    //- 
-    //- p Festival: Saturday #{globals.ipf.date.saturday.date} and Sunday #{globals.ipf.date.sunday.date}, #{globals.ipf.date.year} (#{globals.ipf.date.saturday.hours})
+        .PageIntro
 
+            .PageIntro-header
+                h1 Welcome to Atlanta's Favorite Street Festival
                 
-    .u-container
-
-            p During the last full weekend in April each year, Inman Park proudly presents a neighborhood festival widely regarded as Atlanta&rsquo;s most spirited and eclectic.
-
-            p Please join us for the #{globals.ipf.date.annual}th Inman Park Spring Festival and Tour Of Homes.
+            .PageIntro-copy
+                p During the last full weekend in April each year, Inman Park proudly presents a neighborhood festival widely regarded as Atlanta&rsquo;s most spirited and eclectic.
+                p Please join us for the #{globals.ipf.date.annual}th Inman Park Spring Festival and Tour Of Homes.
 
                 
     ul.PromoGrid.u-container-md
