--- a/src/assets/css/common/_core.scss
+++ b/src/assets/css/common/_core.scss
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 1.75em;
+    font-size: 2.5em;
 }
 
 h2 {
@@ -67,10 +67,11 @@ p {
 }
 
 a {
+    color: rgb(85, 132, 46); // green
     text-decoration: none;
 
     &:visited {
-        color: #00008F;
+        color: rgb(50, 93, 15);
     }
 
     &:hover {
