--- a/src/html/templates/layout.jade
+++ b/src/html/templates/layout.jade
@@ -17,7 +17,7 @@ html(lang="en")
 
     body
 
-        header#Header.u-clear
+        header#Header.Header.u-clear
         
             input#Trigger(type='checkbox' name='trigger')
             
