--- a/src/assets/css/common/_utilities.scss
+++ b/src/assets/css/common/_utilities.scss
@@ -16,6 +16,17 @@
     }
 }
 
+.u-container--noPad {
+    padding: 0;
+    @media (min-width: $bp-lg) {
+        padding: 0;
+    }
+}
+
+.u-unstyledList {
+    list-style: none;
+}
+
 .u-clear:after {
     // clear floats
     content: '';
