--- a/src/assets/css/common/_hero.scss
+++ b/src/assets/css/common/_hero.scss
@@ -8,7 +8,7 @@
         background: none;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $bp-md) {
         // padding: 9em 6em;
     }
 
