--- a/src/assets/css/components/_pageIntro.scss
+++ b/src/assets/css/components/_pageIntro.scss
@@ -2,8 +2,9 @@
     display: flex;
     align-items: flex-start;
     flex-direction: column;
+    margin: 1.5em 0;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $bp-md) {
         flex-direction: row;
         justify-content: space-between;
         margin: 3em 0;
@@ -11,21 +12,22 @@
 }
 
 .PageIntro-header {
-    @media screen and (min-width: 768px) {
-        flex-basis: 35%;
+    @media screen and (min-width: $bp-md) {
+        flex-basis: 40%;
     }
 
     h1 {
         margin-top: 0;
 
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: $bp-md) {
+            margin-left: 1em;
             line-height: 1.5;
         }
     }
 }
 
 .PageIntro-copy {
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $bp-md) {
         flex-basis: 55%;
     }
 
