--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -13,6 +13,7 @@
 @import 'common/vendor';
 
 @import 'components/pageIntro';
+@import 'components/promotions';
 
 @import 'pages/sponsors';
 @import 'pages/faq';
